--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "script.js",
+  "engines": {
+    "node":"18.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon script.js"
   },
   "keywords": [],
   "author": "",
